# control-components

./: CHANGELOG.md  README.md
components/ocs_algo/: CMakeLists.txt  bit_ops.cpp  bit_ops.h  container_ops.h  crc_ops.cpp  crc_ops.h  math_ops.cpp  math_ops.h  mdns_ops.cpp  mdns_ops.h  response_ops.cpp  response_ops.h  sha_engine_ops.h  storage_ops.cpp  storage_ops.h  string_ops.cpp  string_ops.h  time_ops.cpp  time_ops.h  uri_ops.cpp  uri_ops.h
components/ocs_algo/test/: test_crc_ops.cpp  test_storage_ops.cpp  test_string_ops.cpp  test_time_ops.cpp  test_uri_ops.cpp
components/ocs_control/: CMakeLists.txt  basic_led.cpp  basic_led.h  button_event_handler.cpp  button_event_handler.h  config_fsr_handler.cpp  config_fsr_handler.h  flip_led_task.cpp  flip_led_task.h  fsm_block.cpp  fsm_block.h  fsm_block_pipeline.cpp  fsm_block_pipeline.h  fsm_store.cpp  fsm_store.h  gpio_button.cpp  gpio_button.h  gpio_led.cpp  gpio_led.h  ibutton.h  ibutton_handler.h  ifsm_handler.h  ifsr_handler.h  iled.h  ilocator.h  led_locator.cpp  led_locator.h  led_task.cpp  led_task.h  reset_fsm.cpp  reset_fsm.h  system_fsm.cpp  system_fsm.h
components/ocs_control/test/: CMakeLists.txt  test_button_event_handler.cpp  test_fsm_block.cpp  test_fsm_block_storage.cpp  test_fsm_block_storage.h  test_fsm_store.cpp  test_gpio_led.cpp  test_led_locator.cpp  test_reset_fsm.cpp  test_system_fsm.cpp
components/ocs_diagnostic/: CMakeLists.txt  acc_persistent_counter.cpp  acc_persistent_counter.h  basic_counter.cpp  basic_counter.h  basic_counter_holder.cpp  basic_counter_holder.h  basic_persistent_counter.cpp  basic_persistent_counter.h  counter_store.cpp  counter_store.h  icounter.h  mem_persistent_counter.cpp  mem_persistent_counter.h  time_counter.cpp  time_counter.h
components/ocs_diagnostic/test/: test_acc_persistent_counter.cpp  test_basic_counter.cpp  test_mem_persistent_counter.cpp  test_time_counter.cpp
components/ocs_http/: CMakeLists.txt  Kconfig  chunk_stream_writer.cpp  chunk_stream_writer.h  ihandler.h  iheader.h  ipath_handler.h  ipath_iterator.h  ipath_matcher.h  ipattern_iterator.h  ipattern_matcher.h  irequest.h  iresponse_writer.h  irouter.h  iserver.h  router.cpp  router.h  status_code.h  status_code_to_str.cpp  status_code_to_str.h
components/ocs_http/target_esp32/: client_builder.cpp  client_builder.h  client_reader.cpp  client_reader.h  header.cpp  header.h  request.cpp  request.h  response_writer.cpp  response_writer.h  server.cpp  server.h
components/ocs_http/test/: CMakeLists.txt  test_server.cpp
components/ocs_io/: CMakeLists.txt
components/ocs_io/adc/: iadc.h  iconverter.h  ireader.h  istore.h  oneshot_adc.cpp  oneshot_adc.h  types.h
components/ocs_io/gpio/: basic_gpio.h  default_gpio.cpp  default_gpio.h  delay_gpio.cpp  delay_gpio.h  gpio_guard.cpp  gpio_guard.h  ievent_service.h  igpio.h  types.h
components/ocs_io/i2c/: ibus.h  istore.h  itransceiver.h  types.h
components/ocs_io/spi/: ibus.h  istore.h  itransceiver.h  types.h
components/ocs_io/test/: CMakeLists.txt
components/ocs_net/: CMakeLists.txt  Kconfig  ap_network.cpp  ap_network.h  ap_network_config.cpp  ap_network_config.h  basic_mdns_server.cpp  basic_mdns_server.h  default_mdns_driver.cpp  default_mdns_driver.h  default_mdns_server.cpp  default_mdns_server.h  fanout_network_handler.cpp  fanout_network_handler.h  iap_network.h  imdns_driver.h  inetwork.h  inetwork_config.h  inetwork_handler.h  inetwork_runner.h  ip_addr_to_str.cpp  ip_addr_to_str.h  ista_network.h  macros.h  mdns_config.cpp  mdns_config.h  mdns_service.cpp  mdns_service.h  mdns_store.cpp  mdns_store.h  mdns_to_str.cpp  mdns_to_str.h  reset_network_runner.cpp  reset_network_runner.h  rssi_to_signal_strength.cpp  rssi_to_signal_strength.h  sta_network.cpp  sta_network.h  sta_network_config.cpp  sta_network_config.h  (+2 more)
components/ocs_net/target_esp32/: ap_network.cpp  ap_network.h  default_mdns_server.cpp  default_mdns_server.h  netif_builder.cpp  netif_builder.h  sta_network.cpp  sta_network.h
components/ocs_net/test/: CMakeLists.txt  test_default_mdns_server.cpp  test_ip_addr_to_str.cpp  test_rssi_to_signal_strength.cpp  test_sta_network.cpp
components/ocs_scheduler/: CMakeLists.txt  async_func.cpp  async_func.h  async_func_scheduler.cpp  async_func_scheduler.h  async_isr_task.cpp  async_isr_task.h  async_task.cpp  async_task.h  async_task_scheduler.cpp  async_task_scheduler.h  constant_delay_estimator.cpp  constant_delay_estimator.h  fanout_task.cpp  fanout_task.h  func_task.cpp  func_task.h  idelay_estimator.h  ievent_handler.h  itask.h  itask_scheduler.h  itimer.h  operation_guard_task.cpp  operation_guard_task.h  periodic_task_scheduler.cpp  periodic_task_scheduler.h  timer_builder.cpp  timer_builder.h
components/ocs_scheduler/target_esp32/: high_resolution_timer.cpp  high_resolution_timer.h
components/ocs_scheduler/test/: CMakeLists.txt  test_async_func_scheduler.cpp  test_async_task.cpp  test_async_task_scheduler.cpp  test_fanout_task.cpp  (+1 more)
components/ocs_system/: CMakeLists.txt  async_rebooter.cpp  async_rebooter.h  crc32_updater.cpp  crc32_updater.h  delay_rebooter.cpp  delay_rebooter.h  delayer_configuration.cpp  device_id.cpp  device_id.h  device_info.cpp  device_info.h  fanout_reboot_handler.cpp  fanout_reboot_handler.h  fanout_suspender.cpp  fanout_suspender.h  freertos_timer.cpp  freertos_timer.h  freertos_timer_builder.cpp  freertos_timer_builder.h  func_rebooter.cpp  func_rebooter.h  guard_arena.cpp  guard_arena.h  heap_arena.cpp  heap_arena.h  iarena.h  iclock.h  icrc32_calculator.h  idevice_id.h  irandomizer.h  ireboot_handler.h  irebooter.h  irt_delayer.h  isuspend_handler.h  isuspender.h  itimer.h  itimer_builder.h  iupdate_committer.h  iupdater.h  (+15 more)
components/ocs_test/: CMakeLists.txt  memory_storage.cpp  memory_storage.h  status_storage.cpp  status_storage.h  task_scheduler_runner.cpp  task_scheduler_runner.h  test_clock.cpp  test_clock.h  test_counter.cpp  test_counter.h  test_gpio.cpp  test_gpio.h  test_noop_rt_delayer.h  test_storage.h  test_task.cpp  test_task.h  test_timer.cpp  test_timer.h
(+408 files in other folders)
